# SmartCare-in-20251209-ApSetWifi

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  版本记录.md
components/BSP/: CMakeLists.txt
components/BSP/APSETWIFI/: ap_set_wifi.c  ap_set_wifi.h
components/BSP/BEEP/: beep.c  beep.h
components/BSP/BSP_GPIO/: bsp_gpio.c  bsp_gpio.h
components/BSP/BSP_LED/: bsp_led.c  bsp_led.h
components/BSP/BSP_LOG/: bsp_log.c  bsp_log.h
components/BSP/CAMERA/: camera.c  camera.h
components/BSP/DS18B20/: ds18b20.c  ds18b20.h
components/BSP/HEARTBEAT/: heartbeat.c  heartbeat.h
components/BSP/HEAT/: heat.c  heat.h
components/BSP/TCPCLIENT/: tcpclient.c  tcpclient.h
components/BSP/TCPSERVER/: tcpserver.c  tcpserver.h
components/BSP/TIMER/: timer.c  timer.h
components/BSP/USB_COM/: usb_com.c  usb_com.h
components/BSP/WIFI_BLE_PROVISIONING/: blufi_init.c  blufi_security.c  wifi_ble_provisioning.c  wifi_ble_provisioning.h
components/esp32-camera-master/: 23.12.6
components/esp32-camera-master/conversions/: to_bmp.c  to_jpg.7z  to_jpg.cpp
components/esp32-camera-master/driver/: cam_hal.c
components/esp32-camera-master/examples/main/: take_picture.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
